2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Fixed minimum and maximum row/column size handling when the size is star.

2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* ColumnDefinition.cs, RowDefinition.cs: Call InvalidateMeasure on the owner grid when size maximum or minimum changes.

2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: GridLinesRenderer-related partial fix.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* ColumnDefinition.cs, RowDefinition.cs: Call InvalidateMeasure on the owner grid when size changes.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* ColumnDefinitionCollection.cs, RowDefinitionCollection.cs: Added exception cases.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* RowDefinition.cs, ColumnDefinition.cs: Added Grid property.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Added a PropertyChangedCallback to ShowGridLines.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Added handling for out of range Row/Column values.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Fixed type in previous change.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Added validation for Column, ColumnSpan, Row, RowSpan.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: ColumnDefinitionCollection.cs, Grid.cs,  RowDefinitionCollection.cs: Experimental fix.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Incomplete and buggy ShowGridLines implementation.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* ColumnDefinition.cs, Grid.cs, RowDefinition.cs: Implemented Row/ColumnDefinition.Offset (hopefully).

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Another row/column span handling fix.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Added measurement invalidation in response to changes in attached properties.
